examples/test/testpolicy14795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14795
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key45: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value13
      podSelector:
        matchLabels:
          key21: value24
          key5: value36
          key15: value19
